# 100_Days_of_code

./: !Readme.txt  .gitignore  README.md  day_5.py  day_6_video8.py  pyproject.toml
Day_10/: calculator.py  day_10.py
Day_11/: blackjack.py  blackjack_2.py  teachers_version.py
Day_12/: guess_number.py
Day_14/: higher-lower.py  higher-lower_v2.py  teacher.py
Day_15/: coffee_mashine.py  data.py  teacher.py  test_15.py
Day_16/: day_16_start.py
Day_17/: main.py  quiz_brain.py
Day_18/: start-main.py
Day_19/: main_start_19.py  turtle_race.py  turtle_race_v2.py  turtle_race_v3.py
Day_20/: _.txt
Day_22/: ball.py  main.py  main_super_bad_version.py  pad.py  scoreboard.py  walls.py
Day_23/: cars.py  main.py  player.py  scoreboard.py  test.py
Day_24/: main.py  main_v2.py
Day_25/: main.py  states_to_learn.csv  test.py
Day_26/: main.py  test.py
Day_27/: miles_to_km.py  test.py
Day_28/: main.py  test.py
Day_29/: main.py  passwd_gerator.py  saved.txt  test.py
Day_32/: birthdays.csv  main.py  main_.py
Day_33/: day_33_start.py  kanye.py  test.py
Day_34/: data.py  main.py  quiz_brain.py  test.py  ui.py
Day_35/: main.py
Day_36/: main.py
Day_37/: main.py
Day_38/: main.py
Day_39/: data_manager.py  flight_search.py  main.py
Day_41/: index.html
Day_41-43/: index.html
Day_44/: index.html
Day_45/: 100_movies.py  response.txt  ycom_main.py
Day_46/: main.py  songs_list.txt
Day_5/: password_generator.py
Day_54/: first_decorator.py
Day_55/: flask_and_decorator.py  func_logger.py  server.py
Day_56/: server.py
Day_57/: main.py
(+132 files in other folders)
