[tool.poetry]
name = "100_days_of_code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.0.1"
requests = "^2.25.1"
email-validator = "^1.1.3"
Flask-Bootstrap = "^3.3.7"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
