[tool.poetry]
name = "100_days_of_code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.0.1"
requests = "^2.25.1"
Flask-WTF = "^0.15.1"
Flask-Bootstrap = "^3.3.7"
Werkzeug = "^2.0.1"
SQLAlchemy = "^1.4.22"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.1"
Flask-CKEditor = "^0.4.6"
visitor = "^0.1.3"
MarkupSafe = "^2.0.1"
itsdangerous = "^2.0.1"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
